@@ -1,5 +1,5 @@
 <?php
-require_once '{$basedir}/app/{$project_id}_Controller.php';
+require_once dirname(__FILE__) . '/../app/{$project_id}_Controller.php';
 
 {$project_id}_Controller::main('{$project_id}_Controller', array(
     '__ethna_info__',
